--- a/static/css/modules/styles.css
+++ b/static/css/modules/styles.css
@@ -93,6 +93,12 @@
         margin-bottom: 6rem;
     }
 
+    @media screen and (max-width: 768px) {
+        .login-form__field-container {
+            margin-bottom: 4.9rem;
+        }
+    }
+
         .login-form__field-container--offset-small {
             margin-bottom: 3.5rem;
         }
@@ -538,6 +544,12 @@
     box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.05);
 }
 
+    @media screen and (max-width: 374px) {
+        .application-card {
+            height: auto;
+        }
+    }
+
     .application-card__icon-container {
         line-height: 36px;
         width: 64px;
@@ -558,6 +570,12 @@
 .app-info__info-row {
     display: flex;
 }
+
+    @media screen and (max-width: 374px) {
+        .app-info__info-row {
+            display: block;
+        }
+    }
 
 .app-info__status-col {
     margin-right: 3.1rem;
@@ -663,6 +681,12 @@
         padding: 5px;
     }
 
+    @media screen and (max-width: 1300px) {
+        .placements__item-col {
+            max-width: 50%;
+        }
+    }
+
     @media screen and (max-width: 768px) {
         .placements__item-col {
             display: block;
@@ -724,7 +748,7 @@
 .placement-settings {
     position: relative;
     padding: 2rem 1.6rem;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -811,7 +835,7 @@
     }
 
     @media screen and (max-width: 768px) {
-        .modal {
+        .modal--mobile-fullscreen {
             height: calc(100% - 57px);
             top: 57px;
             padding: 0;
@@ -819,15 +843,19 @@
         }
 
         .modal__ui {
+            width: 90%;
+        }
+
+        .modal--mobile-fullscreen .modal__ui {
             width: 100%;
             height: 100%;
         }
 
-        .modal__header {
+        .modal--mobile-fullscreen .modal__header {
             height: 5.6rem;
         }
 
-        .modal__close-container {
+        .modal--mobile-fullscreen .modal__close-container {
             width: 5.6rem;
             height: 5.6rem;
             line-height: 5.6rem;
